--- a/dulich/bai-viet-noi-bat/index.html
+++ b/dulich/bai-viet-noi-bat/index.html
@@ -4,14 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="https://gmpg.org/xfn/11">
-	<title>BÀI VIẾT NỔI BẬT &#8211; My WordPress</title>
+	<title>BÀI VIẾT NỔI BẬT &#8211; LÊ CÔNG NAM BLOG</title>
 <meta name="robots" content="max-image-preview:large">
 <link rel="dns-prefetch" href="//fonts.googleapis.com">
 <link rel="dns-prefetch" href="//s.w.org">
 <link href="https://fonts.gstatic.com/" crossorigin rel="preconnect">
-<link rel="alternate" type="application/rss+xml" title="My Wordpress &raquo; Feed" href="/feed/">
-<link rel="alternate" type="application/rss+xml" title="My Wordpress &raquo; Comments Feed" href="/comments/feed/">
-<link rel="alternate" type="application/rss+xml" title="My Wordpress &raquo; BÀI VIẾT NỔI BẬT Comments Feed" href="/dulich/bai-viet-noi-bat/feed/">
+<link rel="alternate" type="application/rss+xml" title="LÊ CÔNG NAM BLOG &raquo; Feed" href="/feed/">
+<link rel="alternate" type="application/rss+xml" title="LÊ CÔNG NAM BLOG &raquo; Comments Feed" href="/comments/feed/">
+<link rel="alternate" type="application/rss+xml" title="LÊ CÔNG NAM BLOG &raquo; BÀI VIẾT NỔI BẬT Comments Feed" href="/dulich/bai-viet-noi-bat/feed/">
 		<script>
 			window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/13.0.1\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/13.0.1\/svg\/","svgExt":".svg","source":{"concatemoji":"\/wp-includes\/js\/wp-emoji-release.min.js?ver=5.7.2"}};
 			!function(e,a,t){var n,r,o,i=a.createElement("canvas"),p=i.getContext&&i.getContext("2d");function s(e,t){var a=String.fromCharCode;p.clearRect(0,0,i.width,i.height),p.fillText(a.apply(this,e),0,0);e=i.toDataURL();return p.clearRect(0,0,i.width,i.height),p.fillText(a.apply(this,t),0,0),e===i.toDataURL()}function c(e){var t=a.createElement("script");t.src=e,t.defer=t.type="text/javascript",a.getElementsByTagName("head")[0].appendChild(t)}for(o=Array("flag","emoji"),t.supports={everything:!0,everythingExceptFlag:!0},r=0;r<o.length;r++)t.supports[o[r]]=function(e){if(!p||!p.fillText)return!1;switch(p.textBaseline="top",p.font="600 32px Arial",e){case"flag":return s([127987,65039,8205,9895,65039],[127987,65039,8203,9895,65039])?!1:!s([55356,56826,55356,56819],[55356,56826,8203,55356,56819])&&!s([55356,57332,56128,56423,56128,56418,56128,56421,56128,56430,56128,56423,56128,56447],[55356,57332,8203,56128,56423,8203,56128,56418,8203,56128,56421,8203,56128,56430,8203,56128,56423,8203,56128,56447]);case"emoji":return!s([55357,56424,8205,55356,57212],[55357,56424,8203,55356,57212])}return!1}(o[r]),t.supports.everything=t.supports.everything&&t.supports[o[r]],"flag"!==o[r]&&(t.supports.everythingExceptFlag=t.supports.everythingExceptFlag&&t.supports[o[r]]);t.supports.everythingExceptFlag=t.supports.everythingExceptFlag&&!t.supports.flag,t.DOMReady=!1,t.readyCallback=function(){t.DOMReady=!0},t.supports.everything||(n=function(){t.readyCallback()},a.addEventListener?(a.addEventListener("DOMContentLoaded",n,!1),e.addEventListener("load",n,!1)):(e.attachEvent("onload",n),a.attachEvent("onreadystatechange",function(){"complete"===a.readyState&&t.readyCallback()})),(n=t.source||{}).concatemoji?c(n.concatemoji):n.wpemoji&&n.twemoji&&(c(n.twemoji),c(n.wpemoji)))}(window,document,window._wpemojiSettings);
@@ -341,7 +341,7 @@ body {
 	<div class="main-navigation-container">
 		<div class="site-branding">
 							<div class="site-title">
-					 <a href="/" itemprop="headline" rel="home">My Wordpress</a>
+					 <a href="/" itemprop="headline" rel="home">LÊ CÔNG NAM BLOG</a>
 											<p class="site-description" itemprop="description"> Sẽ có thiên thần thay anh yêu em</p>
 					 
 				</div> 
@@ -486,7 +486,7 @@ body {
 					<i class="share-icon">
 						<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" class="ionicon-pinterest svg-icon" viewbox="0 0 512 512"><path d="M256.05 32c-123.7 0-224 100.3-224 224 0 91.7 55.2 170.5 134.1 205.2-.6-15.6-.1-34.4 3.9-51.4 4.3-18.2 28.8-122.1 28.8-122.1s-7.2-14.3-7.2-35.4c0-33.2 19.2-58 43.2-58 20.4 0 30.2 15.3 30.2 33.6 0 20.5-13.1 51.1-19.8 79.5-5.6 23.8 11.9 43.1 35.4 43.1 42.4 0 71-54.5 71-119.1 0-49.1-33.1-85.8-93.2-85.8-67.9 0-110.3 50.7-110.3 107.3 0 19.5 5.8 33.3 14.8 43.9 4.1 4.9 4.7 6.9 3.2 12.5-1.1 4.1-3.5 14-4.6 18-1.5 5.7-6.1 7.7-11.2 5.6-31.3-12.8-45.9-47-45.9-85.6 0-63.6 53.7-139.9 160.1-139.9 85.5 0 141.8 61.9 141.8 128.3 0 87.9-48.9 153.5-120.9 153.5-24.2 0-46.9-13.1-54.7-27.9 0 0-13 51.6-15.8 61.6-4.7 17.3-14 34.5-22.5 48a225.13 225.13 0 0063.5 9.2c123.7 0 224-100.3 224-224S379.75 32 256.05 32z"></path></svg>					</i>
 				</a>
-				<a target="_blank" title="Share this post on Linkedin" href="http://www.linkedin.com/shareArticle?mini=true&#038;url=/dulich/bai-viet-noi-bat/&#038;title=BÀI%20VIẾT%20NỔI%20BẬT&#038;source=My%20Wordpress">
+				<a target="_blank" title="Share this post on Linkedin" href="http://www.linkedin.com/shareArticle?mini=true&#038;url=/dulich/bai-viet-noi-bat/&#038;title=BÀI%20VIẾT%20NỔI%20BẬT&#038;source=LÊ%20CÔNG%20NAM%20BLOG">
 					<i class="share-icon">
 						<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" class="ionicon-linkedin svg-icon" role="img" viewbox="0 0 512 512"><path d="M444.17 32H70.28C49.85 32 32 46.7 32 66.89v374.72C32 461.91 49.85 480 70.28 480h373.78c20.54 0 35.94-18.21 35.94-38.39V66.89C480.12 46.7 464.6 32 444.17 32zm-273.3 373.43h-64.18V205.88h64.18zM141 175.54h-.46c-20.54 0-33.84-15.29-33.84-34.43 0-19.49 13.65-34.42 34.65-34.42s33.85 14.82 34.31 34.42c-.01 19.14-13.31 34.43-34.66 34.43zm264.43 229.89h-64.18V296.32c0-26.14-9.34-44-32.56-44-17.74 0-28.24 12-32.91 23.69-1.75 4.2-2.22 9.92-2.22 15.76v113.66h-64.18V205.88h64.18v27.77c9.34-13.3 23.93-32.44 57.88-32.44 42.13 0 74 27.77 74 87.64z"></path></svg>					</i>
 				</a>
@@ -553,7 +553,7 @@ body {
 					<i class="share-icon">
 						<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" class="ionicon-pinterest svg-icon" viewbox="0 0 512 512"><path d="M256.05 32c-123.7 0-224 100.3-224 224 0 91.7 55.2 170.5 134.1 205.2-.6-15.6-.1-34.4 3.9-51.4 4.3-18.2 28.8-122.1 28.8-122.1s-7.2-14.3-7.2-35.4c0-33.2 19.2-58 43.2-58 20.4 0 30.2 15.3 30.2 33.6 0 20.5-13.1 51.1-19.8 79.5-5.6 23.8 11.9 43.1 35.4 43.1 42.4 0 71-54.5 71-119.1 0-49.1-33.1-85.8-93.2-85.8-67.9 0-110.3 50.7-110.3 107.3 0 19.5 5.8 33.3 14.8 43.9 4.1 4.9 4.7 6.9 3.2 12.5-1.1 4.1-3.5 14-4.6 18-1.5 5.7-6.1 7.7-11.2 5.6-31.3-12.8-45.9-47-45.9-85.6 0-63.6 53.7-139.9 160.1-139.9 85.5 0 141.8 61.9 141.8 128.3 0 87.9-48.9 153.5-120.9 153.5-24.2 0-46.9-13.1-54.7-27.9 0 0-13 51.6-15.8 61.6-4.7 17.3-14 34.5-22.5 48a225.13 225.13 0 0063.5 9.2c123.7 0 224-100.3 224-224S379.75 32 256.05 32z"></path></svg>					</i>
 				</a>
-				<a target="_blank" title="Share this post on Linkedin" href="http://www.linkedin.com/shareArticle?mini=true&#038;url=/dulich/bai-viet-noi-bat/&#038;title=BÀI%20VIẾT%20NỔI%20BẬT&#038;source=My%20Wordpress">
+				<a target="_blank" title="Share this post on Linkedin" href="http://www.linkedin.com/shareArticle?mini=true&#038;url=/dulich/bai-viet-noi-bat/&#038;title=BÀI%20VIẾT%20NỔI%20BẬT&#038;source=LÊ%20CÔNG%20NAM%20BLOG">
 					<i class="share-icon">
 						<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" class="ionicon-linkedin svg-icon" role="img" viewbox="0 0 512 512"><path d="M444.17 32H70.28C49.85 32 32 46.7 32 66.89v374.72C32 461.91 49.85 480 70.28 480h373.78c20.54 0 35.94-18.21 35.94-38.39V66.89C480.12 46.7 464.6 32 444.17 32zm-273.3 373.43h-64.18V205.88h64.18zM141 175.54h-.46c-20.54 0-33.84-15.29-33.84-34.43 0-19.49 13.65-34.42 34.65-34.42s33.85 14.82 34.31 34.42c-.01 19.14-13.31 34.43-34.66 34.43zm264.43 229.89h-64.18V296.32c0-26.14-9.34-44-32.56-44-17.74 0-28.24 12-32.91 23.69-1.75 4.2-2.22 9.92-2.22 15.76v113.66h-64.18V205.88h64.18v27.77c9.34-13.3 23.93-32.44 57.88-32.44 42.13 0 74 27.77 74 87.64z"></path></svg>					</i>
 				</a>
@@ -617,7 +617,7 @@ body {
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="572704a92b"></p>
-<input type="hidden" id="ak_js" name="ak_js" value="179"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
+<input type="hidden" id="ak_js" name="ak_js" value="23"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
 </form>	</div>
 <!-- #respond -->
 	
