--- a/tai-khoan/index.html
+++ b/tai-khoan/index.html
@@ -619,9 +619,20 @@ img.emoji {
 <li id="menu-item-158" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-158"><a href="/">Homepage</a></li>
 <li id="menu-item-159" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-159"><a href="/cua-hang/">Cửa hàng</a></li>
 <li id="menu-item-160" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-160"><a href="/gio-hang/">Giỏ hàng</a></li>
-<li id="menu-item-161" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-9 current_page_item menu-item-161"><a href="/tai-khoan/" aria-current="page">Tài khoản</a></li>
 <li id="menu-item-162" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-162"><a href="/thanh-toan/">Thanh toán</a></li>
-<li id="menu-item-163" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-163"><a href="/tin-tuc-moi/">Tin tức mới</a></li>
+<li id="menu-item-163" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-163">
+<a href="/tin-tuc-moi/">Tin tức công nghệ</a>
+<ul class="sub-menu">
+	<li id="menu-item-421" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-421"><a href="/tim-hieu-ve-dien-thoai/dien-thoai-thong-minh-tim-hieu-ve-dien-thoai/">Điện thoại thông minh là gì? Đây là thông tin bạn cần biết khi đang tìm hiểu về điện thoại 2021</a></li>
+</ul>
+</li>
+<li id="menu-item-161" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-9 current_page_item menu-item-has-children menu-item-161">
+<a href="/tai-khoan/" aria-current="page">Tài khoản</a>
+<ul class="sub-menu">
+	<li id="menu-item-422" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-422"><a href="/tai-khoan/edit-address/">Địa chỉ</a></li>
+	<li id="menu-item-423" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-423"><a href="/tai-khoan/lost-password/">Quên mật khẩu</a></li>
+</ul>
+</li>
 </ul></div>
 <div class="menu"><ul>
 <li><a href="/">Trang chủ</a></li>
@@ -793,6 +804,28 @@ img.emoji {
 <div id="secondary" class="widget-area" role="complementary">
 	<div id="woocommerce_product_categories-9" class="widget woocommerce widget_product_categories">
 <span class="gamma widget-title">Danh mục sản phẩm</span><ul class="product-categories">
+<li class="cat-item cat-item-69 cat-parent">
+<a href="/danh-muc-san-pham/lg/">LG</a> <span class="count">(8)</span><ul class="children">
+<li class="cat-item cat-item-77">
+<a href="/danh-muc-san-pham/lg/lg-limit/">LG Limit</a> <span class="count">(2)</span>
+</li>
+<li class="cat-item cat-item-70">
+<a href="/danh-muc-san-pham/lg/tivi/">tivi</a> <span class="count">(1)</span>
+</li>
+<li class="cat-item cat-item-76">
+<a href="/danh-muc-san-pham/lg/tivi-100-ich/">tivi 100 ich</a> <span class="count">(3)</span>
+</li>
+<li class="cat-item cat-item-72">
+<a href="/danh-muc-san-pham/lg/tivi-50-ich/">tivi 50 ich</a> <span class="count">(2)</span>
+</li>
+<li class="cat-item cat-item-73">
+<a href="/danh-muc-san-pham/lg/tivi-60-inch/">tivi 60 inch</a> <span class="count">(1)</span>
+</li>
+<li class="cat-item cat-item-74">
+<a href="/danh-muc-san-pham/lg/tivi-80-inch/">tivi 80 inch</a> <span class="count">(1)</span>
+</li>
+</ul>
+</li>
 <li class="cat-item cat-item-33 cat-parent">
 <a href="/danh-muc-san-pham/power-changer/">Power changer</a> <span class="count">(2)</span><ul class="children">
 <li class="cat-item cat-item-34">
@@ -839,7 +872,7 @@ img.emoji {
 </ul>
 </li>
 <li class="cat-item cat-item-51 cat-parent">
-<a href="/danh-muc-san-pham/vsmart/">Vsmart</a> <span class="count">(7)</span><ul class="children">
+<a href="/danh-muc-san-pham/vsmart/">Vsmart</a> <span class="count">(10)</span><ul class="children">
 <li class="cat-item cat-item-57">
 <a href="/danh-muc-san-pham/vsmart/active-1/">Active 1</a> <span class="count">(1)</span>
 </li>
@@ -848,6 +881,15 @@ img.emoji {
 </li>
 <li class="cat-item cat-item-60">
 <a href="/danh-muc-san-pham/vsmart/active-3/">Active 3</a> <span class="count">(1)</span>
+</li>
+<li class="cat-item cat-item-67">
+<a href="/danh-muc-san-pham/vsmart/start-3/">start 3</a> <span class="count">(1)</span>
+</li>
+<li class="cat-item cat-item-66">
+<a href="/danh-muc-san-pham/vsmart/start-4/">start 4</a> <span class="count">(1)</span>
+</li>
+<li class="cat-item cat-item-68">
+<a href="/danh-muc-san-pham/vsmart/start-5/">start 5</a> <span class="count">(1)</span>
 </li>
 <li class="cat-item cat-item-52">
 <a href="/danh-muc-san-pham/vsmart/vsmart-aris/">Vsmart Aris</a> <span class="count">(1)</span>
