--- a/tai-khoan/lost-password/index.html
+++ b/tai-khoan/lost-password/index.html
@@ -799,105 +799,16 @@ var _zxcvbnSettings = {"src":"\/wp-includes\/js\/zxcvbn.min.js"};
 	<div id="woocommerce_product_categories-9" class="widget woocommerce widget_product_categories">
 <span class="gamma widget-title">Danh mục sản phẩm</span><ul class="product-categories">
 <li class="cat-item cat-item-69 cat-parent">
-<a href="/danh-muc-san-pham/lg/">LG</a> <span class="count">(8)</span><ul class="children">
-<li class="cat-item cat-item-77">
-<a href="/danh-muc-san-pham/lg/lg-limit/">LG Limit</a> <span class="count">(2)</span>
-</li>
-<li class="cat-item cat-item-70">
-<a href="/danh-muc-san-pham/lg/tivi/">tivi</a> <span class="count">(1)</span>
-</li>
-<li class="cat-item cat-item-76">
-<a href="/danh-muc-san-pham/lg/tivi-100-ich/">tivi 100 ich</a> <span class="count">(3)</span>
-</li>
-<li class="cat-item cat-item-72">
-<a href="/danh-muc-san-pham/lg/tivi-50-ich/">tivi 50 ich</a> <span class="count">(2)</span>
-</li>
-<li class="cat-item cat-item-73">
-<a href="/danh-muc-san-pham/lg/tivi-60-inch/">tivi 60 inch</a> <span class="count">(1)</span>
-</li>
-<li class="cat-item cat-item-74">
-<a href="/danh-muc-san-pham/lg/tivi-80-inch/">tivi 80 inch</a> <span class="count">(1)</span>
-</li>
-</ul>
+<a href="/danh-muc-san-pham/lg/">LG</a> <span class="count">(8)</span>
 </li>
 <li class="cat-item cat-item-33 cat-parent">
-<a href="/danh-muc-san-pham/power-changer/">Power changer</a> <span class="count">(2)</span><ul class="children">
-<li class="cat-item cat-item-34">
-<a href="/danh-muc-san-pham/power-changer/anker-1/">Anker 1</a> <span class="count">(1)</span>
-</li>
-<li class="cat-item cat-item-36">
-<a href="/danh-muc-san-pham/power-changer/anker-20k/">Anker 20k</a> <span class="count">(1)</span>
-</li>
-</ul>
+<a href="/danh-muc-san-pham/power-changer/">Power changer</a> <span class="count">(2)</span>
 </li>
 <li class="cat-item cat-item-16 cat-parent">
-<a href="/danh-muc-san-pham/samsung/">Samsung</a> <span class="count">(11)</span><ul class="children">
-<li class="cat-item cat-item-32">
-<a href="/danh-muc-san-pham/samsung/s21-ultra/">S21 Ultra</a> <span class="count">(2)</span>
-</li>
-<li class="cat-item cat-item-38">
-<a href="/danh-muc-san-pham/samsung/samsung-a22/">Samsung A22</a> <span class="count">(1)</span>
-</li>
-<li class="cat-item cat-item-28">
-<a href="/danh-muc-san-pham/samsung/samsung-headphone-inear/">Samsung headphone inear</a> <span class="count">(1)</span>
-</li>
-<li class="cat-item cat-item-17">
-<a href="/danh-muc-san-pham/samsung/samsung-s20-ultra/">Samsung S20 ultra</a> <span class="count">(1)</span>
-</li>
-<li class="cat-item cat-item-21">
-<a href="/danh-muc-san-pham/samsung/samsung-tabl-a7/">Samsung Tabl A7</a> <span class="count">(3)</span>
-</li>
-<li class="cat-item cat-item-26">
-<a href="/danh-muc-san-pham/samsung/samsung-z-fold/">Samsung Z Fold</a> <span class="count">(1)</span>
-</li>
-<li class="cat-item cat-item-46">
-<a href="/danh-muc-san-pham/samsung/tab-s6/">Tab S6</a> <span class="count">(1)</span>
-</li>
-<li class="cat-item cat-item-40 cat-parent">
-<a href="/danh-muc-san-pham/samsung/tab-s7/">Tab S7</a> <span class="count">(3)</span>	<ul class="children">
-<li class="cat-item cat-item-42">
-<a href="/danh-muc-san-pham/samsung/tab-s7/dock/">Dock</a> <span class="count">(1)</span>
-</li>
-<li class="cat-item cat-item-44">
-<a href="/danh-muc-san-pham/samsung/tab-s7/s-pen/">S PEN</a> <span class="count">(1)</span>
-</li>
-	</ul>
-</li>
-</ul>
+<a href="/danh-muc-san-pham/samsung/">Samsung</a> <span class="count">(11)</span>
 </li>
 <li class="cat-item cat-item-51 cat-parent">
-<a href="/danh-muc-san-pham/vsmart/">Vsmart</a> <span class="count">(10)</span><ul class="children">
-<li class="cat-item cat-item-57">
-<a href="/danh-muc-san-pham/vsmart/active-1/">Active 1</a> <span class="count">(1)</span>
-</li>
-<li class="cat-item cat-item-59">
-<a href="/danh-muc-san-pham/vsmart/active-2/">Active 2</a> <span class="count">(1)</span>
-</li>
-<li class="cat-item cat-item-60">
-<a href="/danh-muc-san-pham/vsmart/active-3/">Active 3</a> <span class="count">(1)</span>
-</li>
-<li class="cat-item cat-item-67">
-<a href="/danh-muc-san-pham/vsmart/start-3/">start 3</a> <span class="count">(1)</span>
-</li>
-<li class="cat-item cat-item-66">
-<a href="/danh-muc-san-pham/vsmart/start-4/">start 4</a> <span class="count">(1)</span>
-</li>
-<li class="cat-item cat-item-68">
-<a href="/danh-muc-san-pham/vsmart/start-5/">start 5</a> <span class="count">(1)</span>
-</li>
-<li class="cat-item cat-item-52">
-<a href="/danh-muc-san-pham/vsmart/vsmart-aris/">Vsmart Aris</a> <span class="count">(1)</span>
-</li>
-<li class="cat-item cat-item-55">
-<a href="/danh-muc-san-pham/vsmart/vsmart-live/">Vsmart Live</a> <span class="count">(1)</span>
-</li>
-<li class="cat-item cat-item-62">
-<a href="/danh-muc-san-pham/vsmart/yoy-3/">Yoy 3</a> <span class="count">(1)</span>
-</li>
-<li class="cat-item cat-item-64">
-<a href="/danh-muc-san-pham/vsmart/yoy-4/">yoy 4</a> <span class="count">(1)</span>
-</li>
-</ul>
+<a href="/danh-muc-san-pham/vsmart/">Vsmart</a> <span class="count">(10)</span>
 </li>
 </ul>
 </div>
